tests/machine/x/c/group_by_sort.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/group_by_sort.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/group_by_sort.c:140:25: warning: implicit declaration of function ‘item_list_t_create’ [-Wimplicit-function-declaration]
  140 |     item_list_t tmp10 = item_list_t_create(_gp.items.len);
      |                         ^~~~~~~~~~~~~~~~~~
/workspace/mochi/tests/machine/x/c/group_by_sort.c:140:25: error: invalid initializer

   1: // Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:50Z
