tests/machine/x/c/group_by_sort.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T02:49:29Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static int _sum_int(list_int v) {
  int sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
typedef struct {
  char *key;
  list_int items;
} _GroupString;
typedef struct {
  int len;
  int cap;
  _GroupString *data;
} list_group_string;
static list_group_string _group_by_string(list_string src) {
  list_group_string res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    char *key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (strcmp(res.data[j].key, key) == 0) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data =
            (_GroupString *)realloc(res.data, sizeof(_GroupString) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupString *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = i;
  }
  return res;
}
typedef struct {
  char *cat;
  int val;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
static item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  char *cat;
  double total;
} grouped_item_t;
typedef struct {
  int len;
  grouped_item_t *data;
} grouped_item_list_t;
static grouped_item_list_t create_grouped_item_list(int len) {
  grouped_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(grouped_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  item_t tmp1_data[] = {
      (item_t){.cat = "a", .val = 3}, (item_t){.cat = "a", .val = 1},
      (item_t){.cat = "b", .val = 5}, (item_t){.cat = "b", .val = 2}};
  item_list_t tmp1 = {4, tmp1_data};
  item_list_t items = tmp1;
  item_list_t tmp2 = create_item_list(items.len);
  list_string tmp3 = list_string_create(items.len);
  int tmp4 = 0;
  for (int i5 = 0; i5 < items.len; i5++) {
    item_t i = items.data[i5];
    tmp2.data[tmp4] = i;
    tmp3.data[tmp4] = i.cat;
    tmp4++;
  }
  tmp2.len = tmp4;
  tmp3.len = tmp4;
  list_group_string tmp6 = _group_by_string(tmp3);
  grouped_item_list_t tmp7 = create_grouped_item_list(tmp6.len);
  double *tmp9 = (double *)malloc(sizeof(double) * tmp6.len);
  int tmp8 = 0;
  for (int gi = 0; gi < tmp6.len; gi++) {
    _GroupString _gp = tmp6.data[gi];
    item_list_t tmp10 = item_list_t_create(_gp.items.len);
    for (int i11 = 0; i11 < _gp.items.len; i11++) {
      tmp10.data[i11] = tmp2.data[_gp.items.data[i11]];
    }
    tmp10.len = _gp.items.len;
    struct {
      char *key;
      item_list_t items;
    } g = {_gp.key, tmp10};
    list_int tmp12 = list_int_create(g.items.len);
    int tmp13 = 0;
    for (int i14 = 0; i14 < g.items.len; i14++) {
      item_t x = g.items.data[i14];
      tmp12.data[tmp13] = x.val;
      tmp13++;
    }
    tmp12.len = tmp13;
    tmp7.data[tmp8] = (grouped_item_t){.cat = g.key, .total = _sum_int(tmp12)};
    list_int tmp15 = list_int_create(g.items.len);
    int tmp16 = 0;
    for (int i17 = 0; i17 < g.items.len; i17++) {
      item_t x = g.items.data[i17];
      tmp15.data[tmp16] = x.val;
      tmp16++;
    }
    tmp15.len = tmp16;
    tmp9[tmp8] = (-_sum_int(tmp15));
    tmp8++;
  }
  tmp7.len = tmp8;
  for (int i20 = 0; i20 < tmp8 - 1; i20++) {
    for (int i21 = i20 + 1; i21 < tmp8; i21++) {
      if (tmp9[i20] > tmp9[i21]) {
        double tmp18 = tmp9[i20];
        tmp9[i20] = tmp9[i21];
        tmp9[i21] = tmp18;
        grouped_item_t tmp19 = tmp7.data[i20];
        tmp7.data[i20] = tmp7.data[i21];
        tmp7.data[i21] = tmp19;
      }
    }
  }
  grouped_item_list_t grouped = tmp7;
  for (int i22 = 0; i22 < grouped.len; i22++) {
    grouped_item_t it = grouped.data[i22];
    if (i22 > 0)
      printf(" ");
    printf("map[");
    printf("cat:");
    printf("%s", it.cat);
    printf(" ");
    printf("total:");
    printf("%.17g", it.total);
    printf("]");
  }
  printf("\n");
  return 0;
}
